--- a/style.css
+++ b/style.css
@@ -6,14 +6,30 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-li {
-    list-style-type: none;
+.header {
+    color: rgb(239, 237, 237);
+    background-color: rgba(27, 25, 24, 0.933);
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: 900;
     font-size: 24px;
 }
 
+li {
+    list-style-type: none;
+    font-size: 24px;  
+}
+
 a {
-    text-decoration: none;
-    color: rgb(239, 237, 237);
+   text-decoration: none;
+   color: rgba(239, 237, 237, 0.65); 
+   font-size: 18px;
 }
 
 ul {
@@ -22,34 +38,24 @@ ul {
     gap: 15px;
 }
 
-h3{
-    font-weight: 900;
-    font-size: 24px;
-}
-.header {
-    color: rgb(239, 237, 237);
-    background-color: rgba(113, 67, 27, 0.582);
-    padding: 10px;
+
+
+.main-content {
+    background-color: rgba(27, 25, 24, 0.933);
+    color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
-.top {
-    background-color: rgba(113, 67, 27, 0.582);
-    display: flex;
-    justify-content: center;
-    
-}
-
-.container {
+.first {
     width: 400px;
-    display: flex;
     padding: 75px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    flex: 0 0 auto;
+    gap: 15px;
 }
 
 .main {
@@ -57,49 +63,62 @@ h3{
     width: auto;
 }
 
-.text {
+.sub-text {
     font-size: 20px;
-    color: #3a3a3aae;
+    color: #c1bfbfae;
 }
 .button1 {
-    padding: 10px 25px;
+    padding: 7px 25px;
     font-size: 14px;
-    background-color: #553000;
+    background-color: rgba(14, 13, 12, 0.933);
     color: rgb(255, 255, 255);
-    border-color: #553000;
-    border-radius: 5px;
+    border-color: #ffffff;
+    border-radius: 7px;
 }
 
-.coffeecups {
+.right-side {
     flex: 1 0 auto; 
     max-width: 350px;
     margin: 40px;
-    border-radius: 5px;
 }
 
-.intro {
-    font-size: 35px;
-    font-weight: 500;
+.mid-section {
+    font-size: 26px;
+    font-weight: 900;
     margin: 30px;
     display: flex;
     justify-content: center;
     text-align: center; 
 }
 
-.mid {
-    margin: 100px;
+.main-mid {
+    margin-bottom: 100px;
     gap: 15px;
     display: flex;
     justify-content: center; 
-    align-items: center;
+    align-items: baseline;
 }
 
-.image {
+.card {
+    margin: 10px;
+    max-width: 200px;
+    display: flex;
+    flex-direction: column;
 }
+
+.text {
+    text-align: center;
+}
+
+img {
+    border-radius: 10px;
+}
+
+
 
 .quote {
-    padding: 100px 450px;
-    font-size: 30px;
+    padding: 100px 350px;
+    font-size: 36px;
     font-weight: 500;
     background-color: #c2bec24a;
     display: flex;
@@ -110,23 +129,26 @@ h3{
 .quoter {
     font-size: 20px;
     color: #262525ae;
+    padding: 15px;
+    display: flex;
+    justify-content: flex-end;
 }
 
-.bottom {
-    margin: 100px 300px; 
-    padding: 50px 100px; 
-    background-color: #5f4e34;
+.last {
+    margin: 75px 200px; 
+    padding: 40px 100px; 
+    background-color: #2c2b29bb;
     color: white;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 15px;
     display: flex;
     justify-content: space-between;
 }
 
 .button2 {
-    padding: 10px 17px;
+    padding: 5px 25px;
     font-size: 14px;
-    background-color: #5f4e34;
+    background-color: #2c2b29bb;
     border-color: white;
     color: white;
     border-radius: 5px;
